# drf-boilerplate

./: LICENSE  README.md  pyproject.toml  pytest.ini
category/: models.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_alter_category_name.py
drf/: settings.py  urls.py
