[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Shine Mon <shine@richkenmedia.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
pytest-django = "^4.4.0"
PyYAML = "^5.4.1"
uritemplate = "^3.0.1"
djangorestframework-simplejwt = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
